--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
