--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
