--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.12",
@@ -21,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5"
