--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.12",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
