--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
