--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
+    "react-share": "^5.2.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
